syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message CodingTemplateInfo {
	//ID 
 	string id=1;
    //代号
    string code=2;
    //索引类型
    int32 indexType=3;
    //索引位数
    int32 indexBits=4;
    //描述
    string description=5;
    //备注
    string remark=6;
    //编码元素
    repeated CodingElementInfo codingElements=7;
}

message CodingElementInfo{
	//ID 
    string id=1;
	//编码模板ID 
    string CodingTemplateID=2;
	//顺序 
    int32 SortIndex=3;
	//名称 
    string Name=4;
	//元素类型 
    int32 ElementType=5;
	//数据位数 
    int32 DataBits=6;
	//预设值 
    string DefaultValue=7;
	//占位符 
    string PlaceHolder=8;
	//备注 
    string Remark=9;
    //编码元素值
    repeated CodingElementValueInfo codingElementValues=10;
}

message CodingElementValueInfo{
	//ID 
    string id=1;
	//编码元素ID 
    string CodingElementID=2;
	//值 
    string Value=3;
	//描述 
    string Description=4;
}

message QueryCodingTemplateRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    //代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=4;
}

message QueryCodingTemplateResponse{
    Code code=1;
    string message=2;
    repeated CodingTemplateInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllCodingTemplateResponse{
    Code code=1;
    string message=2;
    repeated CodingTemplateInfo data=3;
}

message GetCodingTemplateDetailResponse{
    Code code=1;
    string message=2;
    CodingTemplateInfo data=3;
}